--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <table class="tabela-titulo">
         <thead>
           <tr>
-            <th colspan="2">Tags e suas funcionalidades</th>
+            <th colspan="2" id="th-especial1">Tags e suas funcionalidades</th>
           </tr>
         </thead>
         <tbody>
